--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,87 @@
 plugins {
-    id 'groovy'
-    id 'java-library'
+  id 'groovy'
+  id 'java-library'
+  id 'signing'
+  id 'maven-publish'
+  id('io.github.gradle-nexus.publish-plugin') version '1.2.0'
+  id "com.github.ben-manes.versions" version "0.46.0"
 }
 
 group 'se.alipsa'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    def groovy = 'org.apache.groovy:groovy:4.0.8'
-    compileOnly groovy
-    testImplementation groovy
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+  def groovy = 'org.apache.groovy:groovy:4.0.9'
+  compileOnly groovy
+  testImplementation groovy
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
 
 test {
-    useJUnitPlatform()
+  testLogging.showStandardStreams = true
+  useJUnitPlatform()
+}
+
+//Maven Central uploads
+task javadocJar(type: Jar, dependsOn: groovydoc) {
+  classifier = 'javadoc'
+  from groovydoc.destinationDir
+}
+
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+nexusPublishing {
+  repositories {
+    sonatype()
+  }
+}
+
+publishing {
+  publications {
+    maven(MavenPublication) {
+      from components.java
+      artifact(javadocJar)
+      artifact(sourcesJar)
+      pom {
+        name = 'Groovy Matrix Data Utils'
+        description = "${project.description}"
+        url = "https://github.com/Alipsa/matrix"
+        licenses {
+          license {
+            name = 'MIT License'
+            url = 'https://raw.githubusercontent.com/Alipsa/matrix/master/LICENSE'
+          }
+        }
+        developers {
+          developer {
+            id = 'perNyfelt'
+            name = 'Per Nyfelt'
+          }
+        }
+        scm {
+          url = 'https://github.com/Alipsa/matrix/tree/master'
+          connection = 'scm:git:https://github.com/Alipsa/matrix.git'
+          developerConnection = 'scm:git:https://github.com/Alipsa/matrix.git'
+        }
+      }
+    }
+  }
+}
+
+signing {
+  if (project.properties['signing.keyId'] != null) {
+    project.logger.lifecycle("Signing artifacts...")
+    sign publishing.publications.maven
+  } else {
+    project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
+  }
 }
