--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
   def groovy = 'org.apache.groovy:groovy:4.0.9'
   compileOnly groovy
+  implementation 'org.apache.commons:commons-math3:3.6.1'
   testImplementation groovy
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
