--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
   id 'java-library'
   id 'signing'
   id 'maven-publish'
-  id('io.github.gradle-nexus.publish-plugin') version '1.2.0'
+  id('io.github.gradle-nexus.publish-plugin') version '1.3.0'
   id "com.github.ben-manes.versions" version "0.46.0"
 }
 
@@ -18,9 +18,12 @@ dependencies {
   def groovy = 'org.apache.groovy:groovy:4.0.9'
   compileOnly groovy
   testImplementation groovy
-  testImplementation 'org.apache.commons:commons-math3:3.6.1'
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+  testImplementation 'org.apache.commons:commons-math3:3.6.1'
+  testImplementation 'se.alipsa.groovy:data-utils:1.0.3'
+  testImplementation 'com.h2database:h2:2.1.214'
+  testImplementation 'org.apache.groovy:groovy-sql:4.0.9'
 }
 
 test {
