--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
   id "com.github.ben-manes.versions" version "0.46.0"
 }
 
-group 'se.alipsa'
+group 'se.alipsa.groovy'
 version '1.0-SNAPSHOT'
 
 repositories {
