--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.0.1'
+version '1.0.2-SNAPSHOT'
+description = "Groovy library for working with matrix ([][]) data"
 
 repositories {
   mavenCentral()
