--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ group 'se.alipsa.groovy'
 version '1.0.2-SNAPSHOT'
 description = "Groovy library for working with matrix ([][] data)"
 
+
+tasks.withType(JavaCompile) {
+  options.release = 11
+}
+
 repositories {
   mavenCentral()
 }
