--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.0.2-SNAPSHOT'
+version '1.1.0-SNAPSHOT'
 description = "Groovy library for working with matrix ([][] data)"
 
 
@@ -23,7 +23,7 @@ repositories {
 }
 
 dependencies {
-  def groovyVersion = '4.0.10'
+  def groovyVersion = '4.0.11'
   def groovy = "org.apache.groovy:groovy:$groovyVersion"
   compileOnly groovy
   testImplementation groovy
@@ -42,13 +42,13 @@ test {
 
 //Maven Central uploads
 task javadocJar(type: Jar, dependsOn: groovydoc) {
-  classifier = 'javadoc'
+  archiveClassifier = 'javadoc'
   from groovydoc.destinationDir
 }
 
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-  classifier = 'sources'
+  archiveClassifier = 'sources'
   from sourceSets.main.allSource
 }
 
