--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.1.1-SNAPSHOT'
+version '1.1.1'
 description = "Groovy library for working with matrix ([][] data)"
 
 
@@ -23,12 +23,12 @@ repositories {
 }
 
 dependencies {
-  def groovyVersion = '4.0.11'
+  def groovyVersion = '4.0.12'
   def groovy = "org.apache.groovy:groovy:$groovyVersion"
   compileOnly groovy
   testImplementation groovy
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
   testImplementation 'org.apache.commons:commons-math3:3.6.1'
   testImplementation 'se.alipsa.groovy:data-utils:1.0.3'
   testImplementation 'com.h2database:h2:2.1.214'
@@ -42,13 +42,13 @@ test {
 
 //Maven Central uploads
 task javadocJar(type: Jar, dependsOn: groovydoc) {
-  archiveClassifier = 'javadoc'
+  archiveClassifier.set('javadoc')
   from groovydoc.destinationDir
 }
 
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-  archiveClassifier = 'sources'
+  archiveClassifier.set('sources')
   from sourceSets.main.allSource
 }
 
@@ -96,5 +96,24 @@ signing {
     sign publishing.publications.maven
   } else {
     project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
+  }
+}
+
+def isNonStable = { String version ->
+  def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
+  def regex = /^[0-9,.v-]+(-r)?$/
+  return !stableKeyword && !(version ==~ regex)
+}
+
+// https://github.com/ben-manes/gradle-versions-plugin
+tasks.named("dependencyUpdates").configure {
+  resolutionStrategy {
+    componentSelection {
+      all {
+        if (isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)) {
+          reject('Release candidate')
+        }
+      }
+    }
   }
 }
