--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ plugins {
   id 'signing'
   id 'maven-publish'
   id('io.github.gradle-nexus.publish-plugin') version '1.3.0'
-  id "com.github.ben-manes.versions" version "0.46.0"
+  id "com.github.ben-manes.versions" version "0.47.0"
 }
 
 group 'se.alipsa.groovy'
-version '1.1.2-SNAPSHOT'
+version '1.1.2'
 description = "Groovy library for working with matrix ([][] data)"
 
 
@@ -23,15 +23,15 @@ repositories {
 }
 
 dependencies {
-  def groovyVersion = '4.0.12'
+  def groovyVersion = '4.0.13'
   def groovy = "org.apache.groovy:groovy:$groovyVersion"
   compileOnly groovy
   testImplementation groovy
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
   testImplementation 'org.apache.commons:commons-math3:3.6.1'
   testImplementation 'se.alipsa.groovy:data-utils:1.0.3'
-  testImplementation 'com.h2database:h2:2.1.214'
+  testImplementation 'com.h2database:h2:2.2.220'
   testImplementation "org.apache.groovy:groovy-sql:$groovyVersion"
 }
 
