--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.1.2'
+version '1.1.3-SNAPSHOT'
 description = "Groovy library for working with matrix ([][] data)"
 
 
