--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 group 'se.alipsa.groovy'
 version '1.1.3-SNAPSHOT'
-description = "Groovy library for working with matrix ([][] data)"
+description = "Groovy libraries for working with matrix ([][] data)"
 
 
 java {
