--- a/build.gradle
+++ b/build.gradle
@@ -43,15 +43,28 @@ test {
 }
 
 //Maven Central uploads
-task javadocJar(type: Jar, dependsOn: groovydoc) {
-  archiveClassifier.set('javadoc')
+tasks.register('javadocJar', Jar) {
+  dependsOn groovydoc
+  archiveClassifier.set 'javadoc'
   from groovydoc.destinationDir
 }
 
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-  archiveClassifier.set('sources')
+tasks.register('sourcesJar', Jar) {
+  dependsOn classes
+  archiveClassifier.set 'sources'
   from sourceSets.main.allSource
+}
+
+subprojects {
+
+  afterEvaluate {
+    artifacts {
+      archives javadocJar
+    }
+    artifacts {
+      archives sourcesJar
+    }
+  }
 }
 
 nexusPublishing {
