--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.1.3-SNAPSHOT'
+version '1.2.0-SNAPSHOT'
 description = "Groovy library for working with matrix ([][] data)"
 
 
@@ -61,7 +61,7 @@ publishing {
       artifact(javadocJar)
       artifact(sourcesJar)
       pom {
-        name = 'Groovy Matrix Data Utils'
+        name = 'Matrix Core'
         description = "${project.description}"
         url = "https://github.com/Alipsa/matrix"
         licenses {
