--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.2.0-SNAPSHOT'
+version '1.2.0'
 description = "Groovy library for working with matrix ([][] data)"
 
 
