--- a/build.gradle
+++ b/build.gradle
@@ -1,60 +1,11 @@
 plugins {
-  id 'groovy'
-  id 'java-library'
-  id 'signing'
-  id 'maven-publish'
-  id('io.github.gradle-nexus.publish-plugin') version '1.3.0'
+  //id('io.github.gradle-nexus.publish-plugin') version '1.3.0'
   id "com.github.ben-manes.versions" version "0.47.0"
 }
 
-group 'se.alipsa.groovy'
-version '1.1.3-SNAPSHOT'
 description = "Groovy libraries for working with matrix ([][] data)"
 
-
-java {
-  toolchain {
-    languageVersion = JavaLanguageVersion.of(17)
-  }
-}
-
-repositories {
-  mavenCentral()
-}
-
-dependencies {
-  def groovyVersion = '4.0.15'
-  def groovy = "org.apache.groovy:groovy:$groovyVersion"
-  compileOnly groovy
-  //compileOnly "org.apache.groovy:groovy-ginq:$groovyVersion"
-  testImplementation groovy
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
-  testImplementation 'org.apache.commons:commons-math3:3.6.1'
-  testImplementation 'se.alipsa.groovy:data-utils:1.0.3'
-  testImplementation 'com.h2database:h2:2.2.220'
-  testImplementation "org.apache.groovy:groovy-sql:$groovyVersion"
-  //testImplementation "org.apache.groovy:groovy-ginq:$groovyVersion"
-}
-
-test {
-  testLogging.showStandardStreams = true
-  useJUnitPlatform()
-}
-
-//Maven Central uploads
-tasks.register('javadocJar', Jar) {
-  dependsOn groovydoc
-  archiveClassifier.set 'javadoc'
-  from groovydoc.destinationDir
-}
-
-tasks.register('sourcesJar', Jar) {
-  dependsOn classes
-  archiveClassifier.set 'sources'
-  from sourceSets.main.allSource
-}
-
+/*
 subprojects {
 
   afterEvaluate {
@@ -73,46 +24,7 @@ nexusPublishing {
   }
 }
 
-publishing {
-  publications {
-    maven(MavenPublication) {
-      from components.java
-      artifact(javadocJar)
-      artifact(sourcesJar)
-      pom {
-        name = 'Groovy Matrix Data Utils'
-        description = "${project.description}"
-        url = "https://github.com/Alipsa/matrix"
-        licenses {
-          license {
-            name = 'MIT License'
-            url = 'https://raw.githubusercontent.com/Alipsa/matrix/main/LICENSE'
-          }
-        }
-        developers {
-          developer {
-            id = 'perNyfelt'
-            name = 'Per Nyfelt'
-          }
-        }
-        scm {
-          url = 'https://github.com/Alipsa/matrix/tree/main'
-          connection = 'scm:git:https://github.com/Alipsa/matrix.git'
-          developerConnection = 'scm:git:https://github.com/Alipsa/matrix.git'
-        }
-      }
-    }
-  }
-}
-
-signing {
-  if (project.properties['signing.keyId'] != null) {
-    project.logger.lifecycle("Signing artifacts...")
-    sign publishing.publications.maven
-  } else {
-    project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
-  }
-}
+ */
 
 def isNonStable = { String version ->
   def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
