--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -35,7 +35,7 @@ dependencies {
   testImplementation project(':matrix-core')
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
-  testImplementation 'se.alipsa.groovy:matrix-datasets:1.0.3-SNAPSHOT'
+  testImplementation project(':matrix-datasets')
 }
 
 test {
