--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -1,3 +1,8 @@
+buildscript {
+    dependencies {
+        classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT'
+    }
+}
 plugins {
     id 'groovy'
     id 'java-library'
@@ -6,8 +11,12 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.0.1-SNAPSHOT'
+version '1.0.1'
 description 'Groovy spreadsheet import/export'
+
+ext.nexusUrl = version.contains("SNAPSHOT")
+    ? "https://oss.sonatype.org/content/repositories/snapshots/"
+    : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
 repositories {
     if (version.contains('SNAPSHOT')) {
@@ -19,11 +28,13 @@ repositories {
 dependencies {
     def groovy = 'org.apache.groovy:groovy:4.0.15'
     compileOnly groovy
-    api project(':matrix-core')
+    //api project(':matrix-core')
+    compileOnly('se.alipsa.groovy:matrix-core:1.2.1')
     implementation('org.apache.poi:poi:5.2.4')
     implementation('org.apache.poi:poi-ooxml:5.2.4')
     implementation 'com.github.miachm.sods:SODS:1.6.4'
 
+    testImplementation('se.alipsa.groovy:matrix-core:1.2.1')
     testImplementation 'org.apache.logging.log4j:log4j-core:2.21.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
@@ -82,6 +93,17 @@ publishing {
             }
         }
     }
+    if (project.ext.properties.sonatypeUsername) {
+        repositories {
+            maven {
+                credentials {
+                    username = sonatypeUsername
+                    password = sonatypePassword
+                }
+                url = nexusUrl
+            }
+        }
+    }
 }
 
 signing {
@@ -91,4 +113,11 @@ signing {
     } else {
         project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
     }
+}
+
+if (project.ext.properties.sonatypeUsername) {
+    apply plugin: 'nexus-release-plugin'
+    nexusReleasePlugin.nexusUrl = nexusUrl
+    nexusReleasePlugin.userName = sonatypeUsername
+    nexusReleasePlugin.password = sonatypePassword
 }
